fix(vertical-nav): use sr-only css for collapsed link text
replace display:none with screen-reader-only mixin

fixes VPAT-649

--- a/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
+++ b/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
@@ -489,7 +489,7 @@
 
         .nav-group-text,
         .nav-text {
-          display: none;
+          @include screen-reader-only();
         }
       }
     }
